# expense-tracker-aggregator

./: .env.test  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  docker-compose.test.yml  pyproject.toml
.github/workflows/: main.yml  release.yml  test.yml
scripts/: test.sh
src/: main.py
src/common/: __init__.py  config.py  constants.py  logger.py
src/controller/: __init__.py  consumer_base_controller.py  controller_factory.py  transaction_create_aggregator.py
src/database/: __init__.py  psql.py  sql.py  sql_factory.py
src/model/: __init__.py  transaction.py
src/service/: __init__.py  base_service.py  daily_credit_card_transaction_aggregator.py  daily_user_transaction_aggregator.py  service_factory.py
tests/: __init__.py  conftest.py
tests/integrations/controller/: test_transaction_create_aggregator.py
tests/setup/: setup.py  setup.sql  teardown.py  teardown.sql
tests/unit/common/: __init__.py  test_config.py
tests/unit/controller/: __init__.py  test_controller_factory.py
tests/unit/database/: test_psql.py  test_sql.py  test_sql_factory.py
tests/unit/service/: __init__.py  test_daily_credit_card_transaction_aggregator.py  test_daily_user_transaction_aggregator.py  test_service_factory.py
